# ndn-bootstrap

./: .gitignore  README.rst  ca.py  ca_storage.py  challenge_actor.py  config.py  ecdh.py  email_challenge_actor.py  gui.py  main.py  main2.py  main3.py  ndncert-ca.conf  ndncert-ca.conf.sample  ndncert_crypto.py  ndncert_proto.py  pib.db  protocol-spec.md  pyproject.toml  requirements.txt  sending_email.py  setup.cfg
app_support/: __init__.py  auth.config.template  issuer.config.sample  lvs_template.py  tib.py
auth/: __init__.py  auth.py  email_auth.py  operator-email.conf  possession_auth.py
auth/email/: email_auth.py
bootstrap/: __init__.py  config.py  crypto_tools.py  keychain_register.py  types.py
bootstrap/app/: __init__.py  controller.py  entity.py
bootstrap/app_support/: __init__.py  ca_tib.py  safebag.py  simple_rdr.py
bootstrap/mini/: __init__.py  ca-template.conf  controller.py  entity.py  ndncert-ca-auth.conf  tib-bootstrap.py
bootstrap/ndnauth/: __init__.py  auth_state.py  mode_encoder.py  name_assigner.py  protocol.py
bootstrap/ndnauth/app/: __init__.py  name_aa.py  name_client.py  name_requester.py
bootstrap/ndnauth/name_assign/: __init__.py  assign.py  assign_email.py  assign_server.py  assign_user.py
bootstrap/ndnauth/name_auth/: __init__.py  authenticate.py  authenticate_email.py  authenticate_oidc.py  authenticate_server.py  authenticate_user.py  member_check.py  member_check_email.py  member_check_oidc.py  member_check_server.py  member_check_user.py  template_default.conf
bootstrap/ndncert/: cert_state.py  challenge_encoder.py  possession_verifier.py  protocol_v3.py  verifier.py
bootstrap/ndncert/app/: ca.py  cert_issuer.py  cert_requester.py  client.py
bootstrap/ndncert/auth/: auth.py  email_auth.py  possession_auth.py  user-auth.conf
bootstrap/ndncert/proto/: ca_storage.py  ndncert_proto.py  (+1 more)
bootstrap/tib/: __init__.py  lvs_template.py  tib.py
ca/: __init__.py  ca.py  client.py
challenge/: challenge_actor.py  email_challenge_actor.py
docs/: conf.py  index.rst  requirements.txt
docs/src/: installation.rst
examples/: alice-ndn-privkey.pem  authenticated.pop  cert_client.py  cert_server.py  client.py  controller.conf  controller.py  email_template.conf  entity.py  name_client.py  name_client2.py  name_server.conf  name_server.py  name_server2.conf  name_server2.py  tib-bootstrap.py
examples/bootstrap/: authentication.conf  ndn-local-ucla.bundle  ndncert-ca-auth.conf  ndncert-ca-issuer.conf  ndncert-ca.conf  tib-bootstrap.py  zone-controller.py  zone-entity.py
examples/ca/: ndncert-ca.conf
examples/ca-gui/: README.md  gui-runner.py
examples/ca-runner/: ca-runner.py  client-runner.py  ndncert-ca.conf
examples/gui/: gui-runner.py
examples/low-level/: alice-ndn-cert.pem  cert_server.conf  cert_server.py  name_client2.py  name_server2.conf  name_server2.py
examples/trust-anchors/: test-ca.pem
gui/: gui.py
gui/templates/: approved-requests.html  general-status.html  index.html  rejected-bindings.html  rejected-requests.html  service-list.html  system-overview.html
proto/: ndncert_proto.py  types.py
util/: config.py  ndncert_crypto.py  sending_email.py
(+33 files in other folders)
