[metadata]
name = bootstrap
version = attr: bootstrap.__version__
url = https://github.com/tianyuan129/ndn-bootstrap
author = Tianyuan Yu
author_email = tianyuan@cs.ucla.edu
description = NDN security bootstrapping tools in Python, built upon NDNCERT v0.3
keywords = NDN
license = Apache License 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    Topic :: Internet
    Topic :: System :: Networking
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    plyvel>=1.4.0
    PyYAML >= 5.1.2
    python-ndn>=v0.3-1
    cryptography>=36.0.2
    ecdsa>=0.17.0
python_requires = >=3.9
setup_requires =
    setuptools>=59.2.0

[options.extras_require]
dev =
    pytest>=6.2.5
    pytest-cov>=3.0.0
    flake8>=4.0.1
    build>=0.7.0
